commit changes indexhtml

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/icon.png">
     <title>Logbook walking - Renan</title>
     <link rel="stylesheet" href="./css/cabecalho.css">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/content.css">
     <link rel="stylesheet" href="./css/info.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/responsivity.css">
     
 </head>
 <div>
@@ -217,7 +218,7 @@
             <h2>Conclusion</h2>
             <p>The conclusion I came to is that this challenge was very beneficial for me, and I will continue it to try to improve my healthy and lifestyle. </p> <br>
             <p class="ty" >THANK YOU ALL!!!</p><br>
-            <p><a href="#home" class="back" >Back To Home?</a></p>
+            <p><a href="#home" class="back" >Walk To Home?</a></p>
         </div>
     </div>
 
